--- a/academic/admin_employee/templates/editemployee.html
+++ b/academic/admin_employee/templates/editemployee.html
@@ -12,7 +12,7 @@
                     
                 </ul>
                 <div class="page-title">                    
-                    <h2><span class="fa fa-arrow-circle-o-left"></span> Employee Registration</h2>
+                    <h2><span class="fa fa-arrow-circle-o-left"></span> Employee Updation</h2>
                 </div>   
                 <div class="page-content-wrap">
                 
@@ -28,44 +28,31 @@
                             <div class="block">
                                 <div class="row">
                                         
-                                  
-                                    <div class="col-md-6"> 
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">DOB</label>
-                                        <div class="col-md-9">
-                                            <input type="date" class="form-control datepicker" name="dob"  >
-                                            
-                                        </div>
-                                    </div> 
-                                    </div>       
-                                    <div class="col-md-6">            
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Name</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control"  name="ename">
-                                           
-                                        </div>
-                                    </div>  
-                                    </div>  
                                     <div class="col-md-6">            
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">Gender</label>
+                                            <label class="col-md-3 control-label">Name</label>
                                             <div class="col-md-9">
-                                                <select  name="gender">
-                                                    <option value="0">Choose option</option>
-                                                    <option value="1">Male</option>
-                                                    <option value="2">Female</option>
-                                                   
-                                                </select>
+                                                <input type="text" class="form-control"  value="{{employee_details.empname}}" name="ename">
                                                
                                             </div>
                                         </div>  
                                         </div> 
+                                    <div class="col-md-6"> 
+                                    <div class="form-group">
+                                        <label class="col-md-3 control-label">DOB</label>
+                                        <div class="col-md-9">
+                                            <input type="date" class="form-control datepicker" name="dob"  value="{{employee_details.dob|date:'Y-m-d'}}">
+                                            
+                                        </div>
+                                    </div> 
+                                    </div>       
+                                   
+                                
                                     <div class="col-md-6">                          
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">Mobile</label>
                                         <div class="col-md-9    ">
-                                            <input type="text" class="mask_phone_ext form-control" name="mobile" value="">
+                                            <input type="text" class="mask_phone_ext form-control" name="mobile" value="{{employee_details.mob}}">
                                                 
                                         </div>                        
                                     </div>
@@ -74,7 +61,7 @@
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">E-mail:</label>
                                         <div class="col-md-9">
-                                            <input type="text" value="" name="email" class="form-control">                                        
+                                            <input type="text" value="{{employee_details.email}}" name="email" class="form-control" >                                        
                                             
                                         </div>                   
                                     </div>
@@ -83,51 +70,67 @@
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">Address</label>
                                         <div class="col-md-9">
-                                            <textarea class="form-control"  name="address"rows="5"></textarea>
+                                            <textarea class="form-control"  name="address"rows="5">{{employee_details.address}}</textarea>
                                         </div>
                                     </div>
                                     </div>
-                                  
                                     <div class="col-md-6">  
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Department</label>
-                                        <div class="col-md-9">
-                                            
-                                                <select id="formGender" class="validate[required] select" name="depid" >
-                                                    <option value="">Choose option</option>
-                                                    {% for dep in departmentlist %}
-                                                    <option value="{{dep.id}}">{{dep.depname}}</option>
-                                                  {% endfor %}
-                                                </select>
-                                           
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">Join Date</label>
+                                            <div class="col-md-9">
+                                                <input type="date" class="form-control datepicker" name="joindate" value="{{employee_details.jdate|date:'Y-m-d'}}">
+                                               
+                                            </div>
+                                        </div> 
+                                        </div>    <div class="col-md-6">            
+                                            <div class="form-group">
+                                                <label class="col-md-3 control-label">Gender</label>
+                                                <div class="col-md-9">
+                                                    <select  name="gender">
+                                                        <option value="0">Choose option</option>
+                                                        <option {% if employee_details.gender == 1 %} selected {% endif %} value="1">Male</option>
+                                                        <option  {% if employee_details.gender ==  2 %} selected {% endif %} value="2">Female</option>
+                                                       
+                                                    </select>
+                                                   
+                                                </div>
+                                            </div>  
+                                            </div> 
+                                    <div class="col-md-6">  
+                                      
+                                            <div class="form-group">
+                                                <label class="col-md-3 control-label">Qualification</label>
+                                                <div class="col-md-9">
+                                                    <select  class="validate[required] select"  name="qualification">
+                                                        <option value="">Choose option</option>
+                                                        {% for qul in Qualificationlist %}
+                                                        <option {% if employee_details.qualid.id == qul.id  %} selected {% endif %} value="{{qul.id}}">{{qul.qualname}}</option>
+                                                        {% endfor %}
+                                                        
+                                                    </select>
+                                                </div>
+                                            </div> 
                                         </div>
-                                    </div> 
-                                    </div>
+                                   
                                     
-                                    <div class="col-md-6">  
-                                    <div class="form-group">
-                                        <label class="col-md-3 control-label">Join Date</label>
-                                        <div class="col-md-9">
-                                            <input type="date" class="form-control datepicker" name="joindate">
-                                           
-                                        </div>
-                                    </div> 
-                                    </div>
                                     <div class="col-md-6">  
                                     <div class="input-group ">
                                         <label class="col-md-3 control-label">Photo</label>
-                                        <div class="col-md-9">
-                                       
+                                        <div class="col-md-9">{% if employee_details.photo %}
+                                            <img src="{{employee_details.photo.url}}"class="img-text" width="100" align="left">{% else %}
+                                            <img src="{% static 'img/noimg.png' %}" class="img-text" width="100" align="left">{% endif %}
                                     <input type="file" class="fileinput btn-primary" name="filename" id="filename" title="Browse file" style="left: -157.95px; top: 0.700012px;">
                                      </div> 
                                      </div>  
                                      </div> 
-                                     <div class="col-md-8"> 
+                                     <div class="col-md-6"> 
+                                       
+                                     <div class="col-md-20"> 
                                         <div class="block" id="classdiv"  >
                                             <h4> <strong> class  subject Division</strong></h4>
                                             <div class="form-group">
                                                 <label class="col-md-1 control-label">Class</label>
-                                                <div class="col-md-2">
+                                                <div class="col-md-3">
                                                  
                                                         <select id="classlist" class="validate[required] select" onchange="sublisting(this.value)">
                                                             <option value="select">Choose option</option>
@@ -139,7 +142,7 @@
                                                 </div>
                                             </div>    <div class="form-group">
                                                 <label class="col-md-1 control-label">subject</label>
-                                                <div class="col-md-2">
+                                                <div class="col-md-3">
                                                     
                                                         <select id="sublist" class="validate[required] select" >
                                                             <option value="">Choose option</option>
@@ -154,7 +157,7 @@
                                                     
                                                         <select id="divlist" class="validate[required] select" >
                                                             <option value="">Choose option</option>
-                                                            {% for  division in divlist %}
+                                                            {% for  division in divisionlist %}
                                                             <option value="{{division.id}}">{{division.divname}}</option>
                                                             {% endfor %}
                                                             
@@ -236,10 +239,74 @@
        
 
 <!-- END MESSAGE BOX-->
+<script>
+    function EditpageaddRow(Classid,Subjectid,Divisionid,oldclass,oldsubject,olddivision) {
+
+       
+        var table = document.getElementById("mytbl").getElementsByTagName('tbody')[0];
+
+            // Creating a new row
+            var newRow = table.insertRow(table.rows.length);
+    
+            var cell1 = newRow.insertCell(0);
+            cell1.innerHTML = table.rows.length;
+    
+            // Cell 2: Class
+            var cell2 = newRow.insertCell(1); 
+            
+            cell2.innerHTML = oldclass;
+            var textbox1 = document.createElement("input");
+            textbox1.type = "text";
+            textbox1.id = "txtclass";
+            textbox1.name = "txtclass";
+            textbox1.style.display = "none";
+            textbox1.value =Classid;
+            cell2.appendChild(textbox1);
+    
+            // Cell 3: Subject
+            var cell3 = newRow.insertCell(2);
+            cell3.innerHTML = oldsubject;
+            var textbox2 = document.createElement("input");
+            textbox2.type = "text";
+            textbox2.id = "txtsubject";
+            textbox2.name = "txtsubject";
+            textbox2.style.display = "none";
+            textbox2.value = Subjectid;
+            cell3.appendChild(textbox2);
+    
+            // Cell 4: Division
+            var cell4 = newRow.insertCell(3);
+            cell4.innerHTML=olddivision;
+            var textbox3 = document.createElement("input");
+            textbox3.type = "text";
+            textbox3.id = "txtdivision";
+            textbox3.name = "txtdivision";
+            textbox3.style.display = "none";
+            textbox3.value =Divisionid
+            cell4.appendChild(textbox3);
+    
+            // Cell 5: Action
+            var cell5 = newRow.insertCell(4);
+            var button = document.createElement("button");
+            button.innerHTML = '<span class="fa fa-times"></span>';
+            button.className = "btn btn-primary btn-round";
+            button.onclick = function() {
+                deleteRow(newRow);
+            };
+            cell5.appendChild(button);
+        }
+        
+
+        {%  for scditems in employee_teacherdetails  %}
+
+             EditpageaddRow('{{scditems.classid.id}}','{{scditems.subid.id}}','{{scditems.divid.id}}','{{scditems.classid.clsname}}','{{scditems.subid.subjectname}}','{{scditems.divid.divname}}');
+
+        {% endfor %}
+</script>
 
 
 
-
+<input type="text" value="{{request.scheme}}://{{request.get_host}}/sublist"  id="txtpath" hidden/>
         <!-- BLUEIMP GALLERY -->
         <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
             <div class="slides"></div>
@@ -257,7 +324,6 @@
         <audio id="audio-fail" src="{% static 'audio/fail.mp3' %}" preload="auto"></audio>
         <!-- END PRELOADS -->          
         
-     
 
         {% include "scripts.html" %}
 
